[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0"
aws-config = "0.56"
flechasdb = { git = "https://github.com/codemonger-io/flechasdb.git", tag = "v0.1.0" }
flechasdb-s3 = { git = "https://github.com/codemonger-io/flechasdb-s3.git", tag = "v0.1.0" }
futures = "0.3"
lambda_runtime = "0.8"
serde = "1.0"
tokio = { version = "1.0", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

